--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -5,40 +5,38 @@
 {% endblock %}
 {% block content %}
 
-<div class="card text-center w-50 border-dark mx-auto">
 
-    <h5 class="card-header text-white bg-info">My Profile: {{ data.forename + " " + data.surname }}</h5>
-    <div class="card-body px-lg-5 pt-0">
+    <h5 class="card-header text-white bg-secondary">My Profile: {{ data.forename + " " + data.surname }}</h5>
     <form action="{{ url_for('gui_blueprint._editprofile', id=data.id) }}" method="POST" novalidate class="text-center" style="color: #000000;">
 
-        <table class="form-group">
+        <table class="form-group w-75 align-text-top">
           <tr>
             <td>{{ form.hidden_tag() }}</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.login_id.label }}</td>
-            <td class="px-4 py-1">{{ form.login_id(size=10, class_="form-control", disabled=True) }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.login_id.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.login_id(size=10, class_="form-control", readonly=True) }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.forename.label }}</td>
-            <td class="px-4 py-1">{{ form.forename(size=32, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.forename.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.forename(size=32, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.surname.label }}</td>
-            <td class="px-4 py-1">{{ form.surname(size=64, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.surname.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.surname(size=64, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.email.label }}</td>
-            <td class="px-4 py-1">{{ form.email(size=32, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.email.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.email(size=32, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.comment.label }}</td>
-            <td class="px-4 py-1">{{ form.comment(rows=5, cols=20, class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.comment.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.comment(rows=5, cols=20, class_="form-control") }}</td>
           </tr>
           <tr>
-            <td class="px-4 py-1">{{ form.vendor.label }}</td>
-            <td class="px-4 py-1">{{ form.vendor(class_="form-control") }}</td>
+            <td class="w-25 text-right mx-2 p-1 align-text-center">{{ form.vendor.label }}</td>
+            <td class="w-75 text-left mx-2 p-1">{{ form.vendor(class_="form-control") }}</td>
           </tr>
           <tr>
             <td>&nbsp;</td>
@@ -46,8 +44,6 @@
           </tr>
         </table>
     </form>
-    </div>
 
-</div>
 
 {% endblock %}
